--- a/videoBUGBUG/css/upoload.css
+++ b/videoBUGBUG/css/upoload.css
@@ -1,7 +1,6 @@
 .uploadVideo {
     width: auto;
-    background: black;
-    opacity: 0.5;
+    background: #0a212c;
     margin: 20px;
     border-radius: 20px;
     padding: 20px;
@@ -9,4 +8,48 @@
 
 .uploadVideo form {
     display: block;
+    width: fit-content;
+}
+
+#description {
+    border-radius: 8px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.bugvideo {
+    margin-bottom: 10px;
+}
+
+.videoTable {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgb(193, 171, 171);
+    border-radius: 2px;
+}
+
+.videoTable th {
+    background: rgb(255, 255, 255);
+    border-radius: 2px;
+    padding: 10px;
+    border-left: 2px solid rgb(2, 2, 2);
+}
+
+.videoTable td {
+    padding: 10px;
+    border-left: 2px solid rgb(2, 2, 2);
+}
+
+.headUp {
+    color: white;
+    margin: 20px;
+}
+
+.tbArea {
+    margin: 20px;
+}
+
+#file {
+    padding: 10px;
+    color: white;
 }
